--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
+    "react-spinners": "^0.13.5",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
